@@ -74,7 +74,7 @@ test-suite wave
             :
             # arguments
                 $(TESTWAVE_ARGUMENTS) 
-                --config-file $(TESTWAVE_DIR)/$(TESTWAVE_FILES)
+                --config-file=$(TESTWAVE_DIR)/$(TESTWAVE_FILES)
             :
             # input files
             :
